Working on lab3

--- a/lab2/lab02_Leonandya_vanStigt.ipynb
+++ b/lab2/lab02_Leonandya_vanStigt.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1044,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1050,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -1932,6 +1932,21 @@
     "\n",
     "print('Noise in the noisy picture: {}%'.format(original_noise))\n",
     "print('Noise left in the denoised picture: {}%'.format(noise_left))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mrf = MRF(noise_im)\n",
+    "mrf.make_graph(flipping=0.1, similar=0.8)\n",
+    "mrf.max_sum(iterations=1)\n",
+    "\n",
+    "denoised_good = mrf.denoised()"
    ]
   },
   {
